Compatibility update
- reformatted code to work for java 17+ instead of java 21